[package]
name = "bunyan"
version = "0.1.8-alpha.0"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A CLI to pretty print structured logs. A Rust port of the original JavaScript bunyan CLI."
repository = "https://github.com/LukeMathWalker/bunyan"

[[bin]]
path = "src/main.rs"
name = "bunyan"

[lib]
path = "src/lib.rs"
name = "bunyan"

[dependencies]
clap = { version = "3.0.0-rc.4", features = ["derive"] }
anyhow = "1.0.44"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
chrono = { version = "0.4.19", features = ["serde"] }
atty = "0.2.14"
colored = "2.0.0"
itertools = "0.10.1"
quick-js = "0.4.1"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.0.3"
